--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -29,10 +29,11 @@
 
         <ImageView
                 android:id="@+id/goback"
-                android:layout_width="19dp"
-                android:layout_height="36dp"
+                android:layout_width="14dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="16dp"
+                android:onClick="goback"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/collection_bartext"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/icon_white_left" />
@@ -50,14 +51,14 @@
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/gosetting"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
                 android:id="@+id/gosetting"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +67,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="409dp"
             android:layout_height="669dp"
             android:layout_marginStart="1dp"
@@ -78,7 +80,12 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical" >
+                android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/collection_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -88,6 +95,7 @@
                     android:orientation="horizontal">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/collectionCarrot1"
                         android:layout_width="105dp"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="18dp"
@@ -497,7 +505,7 @@
                             app:layout_constraintStart_toStartOf="@+id/view12"
                             app:layout_constraintTop_toTopOf="@+id/view12" />
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
