--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
                 android:layout_width="147dp"
                 android:layout_height="44dp"
                 android:fontFamily="@font/notosanscjkkr_medium"
+                android:includeFontPadding="false"
                 android:text="채찍채찍 당근"
                 android:textAlignment="center"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -81,7 +82,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="38dp"
                 android:layout_height="22dp"
-                android:text="?? 개"
+                android:text="개"
                 android:textAlignment="center"
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -92,7 +93,7 @@
                 app:layout_constraintVertical_bias="0.030" />
 
         <Button
-                android:id="@+id/button"
+                android:id="@+id/goCollection"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
@@ -111,51 +112,39 @@
 
         <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginTop="109dp"
-                android:layout_marginEnd="35dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="280dp"
+                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/carrot_character01" />
 
-        <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView13">
-
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="220dp"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="#F1F1F1" />
+                app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                     android:id="@+id/CarrotInfo"
                     android:layout_width="match_parent"
                     android:layout_height="172dp"
                     android:layout_gravity="bottom"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginTop="61dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginBottom="42dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
                     android:fontFamily="@font/notosanscjkkr_regular"
+                    android:includeFontPadding="false"
                     android:text="이상의 실로 품으며, 거선의 꽃이 튼튼하며, 힘차게 힘있다. 물방아 석가는 미인을 열락의 대한 천고에 가치를 불어 아니다. 있으며, 귀는 희망의 풀이 시들어 보라. 얼마나 때에, 있음으로써 얼음에 것은 원대하고, 같이, 있다. 끝까지 설레는 뭇 창공에 전인 타오르고 따뜻한 그들에게 말이다."
                     android:textColor="#000000"
-                    android:textSize="16sp" />
-
-        </FrameLayout>
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
